--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,11 @@
     <meta name="description" content="한국임상정보 검색 및 최근검색어 기능 구현" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <link
+      href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <title>Search Clinical Trials</title>
   </head>
   <body>
